--- a/index.html
+++ b/index.html
@@ -33,27 +33,27 @@
             <h2 class="container-title ">Top Player</h2>
             <div class="players">
                 <div class="player">
-                    <img src="/images/players/player-1.png" alt="">
+                    <img src="images/players/player-1.png" alt="">
                     <h3 class="player-name">Jashim Miya</h3 class="player-name">
                 </div>
                 <div class="player">
-                    <img src="/images/players/player-2.png" alt="">
+                    <img src="images/players/player-2.png" alt="">
                     <h3 class="player-name">Karim Miya</h3 class="player-name">
                 </div>
                 <div class="player">
-                    <img src="/images/players/player-3.png" alt="">
+                    <img src="images/players/player-3.png" alt="">
                     <h3 class="player-name">Rohim Miya</h3 class="player-name">
                 </div>
                 <div class="player">
-                    <img src="/images/players/player-4.png" alt="">
+                    <img src="images/players/player-4.png" alt="">
                     <h3 class="player-name">Manik Miya</h3 class="player-name">
                 </div>
                 <div class="player">
-                    <img src="/images/players/player-5.png" alt="">
+                    <img src="images/players/player-5.png" alt="">
                     <h3 class="player-name">Boltu Miya</h3 class="player-name">
                 </div>
                 <div class="player">
-                    <img src="/images/players/player-6.png" alt="">
+                    <img src="images/players/player-6.png" alt="">
                     <h3 class="player-name">Montu Miya</h3 class="player-name">
                 </div>
             </div>
@@ -64,7 +64,7 @@
             <div class="top-blogs">
                 <article class="blogs">
                     <div class="blog-img">
-                        <img src="/images/blogs/blog-1.png" alt="">
+                        <img src="images/blogs/blog-1.png" alt="">
                     </div>
                     <div class="blog">
                         <h3 class="blog-title">13 of My Favorite UI/UX Goodies</h3>
@@ -73,7 +73,7 @@
                 </article>
                 <article class="blogs">
                     <div class="blog-img">
-                        <img src="/images/blogs/blog-2.png" alt="">
+                        <img src="images/blogs/blog-2.png" alt="">
                     </div>
                     <div class="blog">
                         <h3 class="blog-title">UI cheat sheet: list vs grids</h3>
@@ -82,7 +82,7 @@
                 </article>
                 <article class="blogs">
                     <div class="blog-img">
-                        <img src="/images/blogs/blog-3.png" alt="">
+                        <img src="images/blogs/blog-3.png" alt="">
                     </div>
                     <div class="blog">
                         <h3 class="blog-title">7 typography tips for interface design</h3>
@@ -91,7 +91,7 @@
                 </article>
                 <article class="blogs">
                     <div class="blog-img">
-                        <img src="/images/blogs/blog-4.png" alt="">
+                        <img src="images/blogs/blog-4.png" alt="">
                     </div>
                     <div class="blog">
                         <h3 class="blog-title">Your logo is copied</h3>
@@ -106,7 +106,7 @@
        <div class="lates-course">
         <div class="course">
             <div class="thumbnail">
-                <img src="/images/courses/course-1.png" alt="">
+                <img src="images/courses/course-1.png" alt="">
             </div>
             <div class="c-info">
                 <h3 class="c-title">React - The Complete Guide 2020</h3>
@@ -130,7 +130,7 @@
         </div>
         <div class="course">
             <div class="thumbnail">
-                <img src="/images/courses/course-2.png" alt="">
+                <img src="images/courses/course-2.png" alt="">
             </div>
             <div class="c-info">
                 <h3 class="c-title">Powerpoint 2020 Master Powerpoint Cour</h3>
@@ -154,7 +154,7 @@
         </div>
         <div class="course">
             <div class="thumbnail">
-                <img src="/images/courses/course-3.png" alt="">
+                <img src="images/courses/course-3.png" alt="">
             </div>
             <div class="c-info">
                 <h3 class="c-title">The Complete JavaScript Course 2020</h3>
